--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -9,6 +9,7 @@
             </div>
             <div>
                 <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
+                <a href="{{ url_for('main.debtors') }}">Debiteuren</a>
                 <a href="{{ url_for('main.logout') }}">Logout</a>
             </div>
         </nav>
