--- a/app/templates/company.html
+++ b/app/templates/company.html
@@ -165,11 +165,9 @@
                     </a>
                 {% endif %}
                 
-                <form action="{{ url_for('main.add_debtor', company_id=company.company_id) }}" method="post" class="d-inline">
-                    <button type="submit" class="btn btn-warning">
-                        <i class="bi bi-person-plus"></i> Voeg toe aan debiteuren
-                    </button>
-                </form>
+                <a href="{{ url_for('main.add_debtor', company_id=company.company_id) }}" class="btn btn-warning">
+                    <i class="bi bi-person-plus"></i> Voeg toe aan debiteuren
+                </a>
                 
                 <a href="{{ url_for('main.score', company_id=company.company_id) }}" class="btn btn-success">
                     <i class="bi bi-calculator-fill"></i> Bereken solvabiliteitscore
