--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -1,6 +1,6 @@
 <header>
     <h1>Solv.io</h1>
-    <p>Financiële gezondheid van bedrijven op een oogopslag</p>
+    <p>Financiële gezondheid van bedrijven in een oogopslag</p>
     
     {% if user %}
         <nav>
