--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -39,7 +39,7 @@
         </p>
     {% else %}
         <p style="text-align: center; color: var(--text-light); padding: 2rem 0;">
-            Voer een bedrijfsnaam of btw-nummer in om te zoeken.
+            Voer een btw-nummer of bedrijfsnaam (indien het bedrijf zich reeds in de database bevindt) in om te zoeken.
         </p>
     {% endif %}
 </div>
