--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <div class="container-sm">
-    <div class="card" style="margin-top: 3rem;">
-        <h2 style="text-align: center; margin-bottom: 2rem;">Account maken</h2>
+    <div class="card auth-card">
+        <h2 class="auth-heading">Account maken</h2>
         
         {% include 'components/alerts.html' %}
         
@@ -29,10 +29,10 @@
             <button type="submit" class="btn-primary btn-block">Account maken</button>
         </form>
         
-        <hr style="margin: 2rem 0; border: none; border-top: 1px solid var(--border-color);">
+        <hr class="auth-divider">
         
-        <p style="text-align: center;">
-            Al een account? <a href="{{ url_for('main.login') }}" style="color: var(--secondary-color); font-weight: 600;">Log hier in</a>
+        <p class="auth-footer-text">
+            Al een account? <a href="{{ url_for('main.login') }}" class="auth-link">Log hier in</a>
         </p>
     </div>
 </div>
