--- a/app/templates/batch_pdf.html
+++ b/app/templates/batch_pdf.html
@@ -161,16 +161,15 @@
         </p>
     </div>
     
-    <table>
+    <table style="table-layout: fixed;">
         <thead>
-            <tr>
-                <th style="width: 5%;">#</th>
-                <th style="width: 30%;">Bedrijf</th>
-                <th style="width: 15%;">BTW-nummer</th>
-                <th style="width: 10%;" class="text-end">Quick Ratio</th>
-                <th style="width: 12%;" class="text-end">Cash (€)</th>
-                <th style="width: 13%;" class="text-end">Credit Limit</th>
-                <th style="width: 15%;">Risico Score</th>
+            <tr style="background-color: #0d6efd; color: white;">
+                <th style="width: 5%; padding: 8px 5px; background-color: #0d6efd; color: white; font-size: 10pt;">#</th>
+                <th style="width: 32%; padding: 8px 5px; background-color: #0d6efd; color: white; font-size: 10pt;">Bedrijf</th>
+                <th style="width: 17%; padding: 8px 5px; background-color: #0d6efd; color: white; font-size: 9pt;">BTW-nummer</th>
+                <th style="width: 14%; padding: 8px 5px; font-size: 8.5pt; text-align: right; background-color: #0d6efd; color: white; line-height: 1.3;">Quick Ratio<br/>(Liquiditeit)</th>
+                <th style="width: 16%; padding: 8px 5px; font-size: 8.5pt; text-align: right; background-color: #0d6efd; color: white; line-height: 1.3;">Liquide<br/>Middelen (€)</th>
+                <th style="width: 16%; padding: 8px 5px; font-size: 8.5pt; text-align: right; background-color: #0d6efd; color: white; line-height: 1.3;">Kredietscore<br/>(/10)</th>
             </tr>
         </thead>
         <tbody>
@@ -180,7 +179,7 @@
                 <td>
                     <strong>{{ case.company.company_name }}</strong>
                     {% if case.company.legal_status %}
-                    <br><span class="text-muted">{{ case.company.legal_status }}</span>
+                    <br><span class="text-muted" style="font-size: 7.5pt;">{{ case.company.legal_status }}</span>
                     {% endif %}
                 </td>
                 <td>{{ case.company.vat_number }}</td>
@@ -199,26 +198,10 @@
                     {% endif %}
                 </td>
                 <td class="text-end">
-                    {% if case.company.credit_limit %}
-                        € {{ "{:,.0f}".format(case.company.credit_limit|float) }}
+                    {% if case.company.credit_score %}
+                        <strong>{{ case.company.credit_score }}</strong>/10
                     {% else %}
                         <span class="text-muted">N/A</span>
-                    {% endif %}
-                </td>
-                <td>
-                    {% if case.company.common_score %}
-                        {% if case.company.common_score in ['A', 'B'] %}
-                            <span class="badge badge-success">{{ case.company.common_score }}</span>
-                        {% elif case.company.common_score == 'C' %}
-                            <span class="badge badge-warning">{{ case.company.common_score }}</span>
-                        {% else %}
-                            <span class="badge badge-danger">{{ case.company.common_score }}</span>
-                        {% endif %}
-                    {% else %}
-                        <span class="badge badge-secondary">N/A</span>
-                    {% endif %}
-                    {% if case.company.credit_score %}
-                        ({{ case.company.credit_score }}/10)
                     {% endif %}
                 </td>
             </tr>
