--- a/app/templates/account_created.html
+++ b/app/templates/account_created.html
@@ -10,7 +10,7 @@
         <p>Welkom! Je bent nu ingelogd en kunt direct aan de slag gaan.</p>
         
         <a href="{{ url_for('main.dashboard') }}" class="btn-primary display-inline-block mt-1-5">
-            Ga naar dashboard
+            Ga naar zoeken
         </a>
     </div>
 </div>
