--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -8,7 +8,7 @@
                 <span>Welkom, <strong>{{ user }}</strong>!</span>
             </div>
             <div>
-                <a href="{{ url_for('main.dashboard') }}">Dashboard</a>
+                <a href="{{ url_for('main.dashboard') }}">Zoeken</a>
                 <a href="{{ url_for('main.debtors') }}">Batches en Debiteuren</a>
                 <a href="{{ url_for('main.logout') }}">Logout</a>
             </div>
