--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -41,7 +41,7 @@
         </a>
         
         <a href="{{ url_for('main.dashboard') }}" class="btn-secondary" style="margin-left: 1rem;">
-            Terug naar dashboard
+            Terug naar zoeken
         </a>
     </div>
 </div>
