--- a/app/templates/company.html
+++ b/app/templates/company.html
@@ -171,7 +171,7 @@
                 </a>
                 
                 <a href="{{ url_for('main.dashboard') }}" class="btn btn-secondary">
-                    <i class="bi bi-arrow-left"></i> Terug naar dashboard
+                    <i class="bi bi-arrow-left"></i> Terug naar zoeken
                 </a>
             </div>
         </div>
