--- a/app/templates/batch_detail.html
+++ b/app/templates/batch_detail.html
@@ -35,7 +35,7 @@
     {% if cases %}
         <div class="card">
             <div class="card-header">
-                <h5 class="mb-0">Debiteuren in deze Batch (Gesorteerd op Risico)</h5>
+                <h5 class="mb-0">Debiteuren in deze Batch </h5>
             </div>
             <div class="card-body p-0">
                 <div class="table-responsive">
